# Recordian

./: .gitignore  AGENTS.md  ANIMATION_FIX.md  CHANGELOG.md  CI_STATUS.md  CLAUDE.md  ELECTRON_DETECTION_REPORT.md  ELECTRON_QUICK_START.md  EVALUATION_REPORT.md  IMPLEMENTATION_PLAN.md  INSTALL.md  LICENSE  OPTIMIZATION_RESEARCH_COMPLETE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_OPTIMIZATION.txt  RELEASE_CHECKLIST.md  RELEASE_FILES.txt  RELEASE_NOTES.md  RESEARCH_COMPLETE_SUMMARY.txt  REVIEW_AND_FIX_REPORT.md  SPRINT1_DELIVERY.md  SPRINT1_SUMMARY.md  benchmark_voice_wake.py  install.sh  make-release.sh  manifest  pyproject.toml  recordian-0.1.0.tar.gz.sha256  setup_voice_wake_optimization.sh  uninstall.sh
.beads/: dolt-monitor.pid  dolt-server.activity  issues.jsonl  metadata.json
.beads/backup/: backup_state.json  comments.jsonl  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl  labels.jsonl
.beads/memory/: .gitattributes  knowledge-db.sh  knowledge.jsonl  recall.sh
.claude/agents/: arch-reviewer.md  architect.md  code-reviewer.md  debugger.md  eval-orchestrator.md  feature-dev.md  perf-reviewer.md  quality-reviewer.md  security-reviewer.md  test-engineer.md  test-reviewer.md
.github/workflows/: ci.yml  release.yml
docs/: API.md  CUSTOM_PRESET_GUIDE.md  GIT_HISTORY_3DAYS.md  LLAMACPP_GUIDE.md  QUICK-REFERENCE-CPU-OPTIMIZATION.md  README-OPTIMIZATION.md  RESEARCH_SUMMARY_CN.md  TROUBLESHOOTING.md  USER_GUIDE.md  VENV_SETUP.md  beads-compound-setup.md  llamacpp-guide.md  logo-guide.md  onnx-quantization-guide.md  presets.md  project-evaluation-2026-02-25.md  python-performance-optimization-research.md  quick-switch.md  sprint1-delivery.md  sprint2-delivery.md  sprint3-progress.md  text-refine.md  tray-guide.md  voice-wake-optimization-examples.py  voice-wake-optimization-summary.md
docs/plans/: 2026-02-25-docs-reorganization-design.md  2026-02-25-docs-reorganization.md  (+4 more)
examples/: hotkey.http-cloud.local-vllm.json
presets/: Arabic.md  English.md  Extended.md  Japanese.md  Korean.md  README.md  code-comment.md  default.md  formal.md  meeting.md  summary.md  technical.md
server/: README.md  asr_server.py  config.example.yaml  recordian-asr.service  setup_server.sh  test_asr_server.py
tests/: test_asr_integration.py  test_audio.py  test_audio_feedback.py  test_auto_lexicon.py  test_backend_manager.py  test_base_text_refiner.py  test_benchmark.py  test_cloud_llm_refiner.py  test_config.py  test_engine.py  test_exceptions.py  test_hotkey_dictate.py  test_hotkey_integration.py  test_http_cloud.py  test_integration.py  test_linux_commit.py  test_linux_commit_shortcut.py  test_linux_dictate.py  test_linux_notify.py  test_logging_config.py  test_performance_benchmark.py  test_policy.py  test_postprocess_pipeline.py  test_preset_manager.py  test_providers_base.py  test_qwen_asr.py  test_qwen_text_refiner.py  test_realtime.py  test_refinement_integration.py  test_remote_paste.py  test_runtime_config.py  test_runtime_deps.py  test_security_fixes.py  test_setting_effects.py  test_speaker_verify.py  test_tray_gui.py  test_voice_wake.py  test_voice_wake_integration.py  test_wake_session_monitor.py  test_waveform_renderer.py  (+2 more)
(+52 files in other folders)
