[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recordian"
version = "0.1.0"
description = "Linux-first voice input engine with pass2 correction policy"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Recordian" }
]
dependencies = []

[project.optional-dependencies]
qwen-asr = ["qwen-asr>=0.0.6", "torch>=2.0.0"]
hotkey = ["pynput>=1.7.7"]
gui = ["pystray>=0.19.5", "pillow>=10.0.0", "pynput>=1.7.7", "pyglet>=2.0.10", "sounddevice>=0.4.6", "numpy>=1.20.0"]
wake = ["sherpa-onnx>=1.10.0", "sounddevice>=0.4.6", "numpy>=1.20.0", "pypinyin>=0.50.0", "webrtcvad-wheels>=2.0.14"]
dev = ["pytest>=8.0", "pytest-cov>=4.0.0", "ruff>=0.1.0", "mypy>=1.0.0", "sentry-sdk>=1.40.0", "numpy>=1.20.0", "psutil>=5.9.0"]

[project.scripts]
recordian = "recordian.cli:main"
recordian-linux-dictate = "recordian.linux_dictate:main"
recordian-hotkey-dictate = "recordian.hotkey_dictate:main"
recordian-tray = "recordian.tray_gui:main"
recordian-wake-diagnose = "recordian.wake_diagnose:main"
recordian-remote-paste-agent = "recordian.remote_paste.agent:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = true
